compiler/fir/analysis-tests/testData/resolve/extendedCheckers/UselessCallOnNotNullChecker/NullOrEmpty.kt
// WITH_STDLIB

konst s = ""
konst empty = s.<!USELESS_CALL_ON_NOT_NULL!>isNullOrEmpty()<!>